--- a/static/core/less/ui.var.less
+++ b/static/core/less/ui.var.less
@@ -104,6 +104,14 @@
     border-right:1px @grey300 solid;
 }
 
+
+.border-visi-re{
+    border-bottom:1px @grey200 solid;
+    border-right:1px @grey200 solid;
+    border-top:1px @grey300 solid;
+    border-left:1px @grey300 solid;
+}
+
 .scale-fade-0{
     opacity:0;
     -webkit-transform:scale(0);
